--- a/Laba3/laba3.html
+++ b/Laba3/laba3.html
@@ -17,7 +17,8 @@
             <td>
                 <form action="" method="get" class="form">
                     <div class="form">
-                        <input type="text" name="name" id="name" required>
+                        <input type="text" name="name" id="name" required placeholder="write your name">
+                        
                     </div>
             </td>
         </tr>
@@ -61,7 +62,7 @@
         <tr>
             <td colspan="2">
                 <label for="story">Delivery Instructions:</label><br/>
-                <textarea id="story" name="story" rows="4" cols="35"></textarea>
+                <textarea id="story" name="story" rows="4" cols="35" placeholder="your wishes..."></textarea>
             </td>
         </tr>
         <tr>
