--- a/Laba4(flex)/laba4(fl).html
+++ b/Laba4(flex)/laba4(fl).html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
-    <link rel="stylesheet" href="laba4.css">
+    <link rel="stylesheet" href="styles/laba4(fl).css">
 </head>
 <body>
     <div class="calculator">
