--- a/Laba5/laba5.html
+++ b/Laba5/laba5.html
@@ -4,9 +4,90 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="laba5.css">
+    <title>Visitka</title>
 </head>
 <body>
+    <div class="left">
+        <div class="left-column">
+            <img class="photo" src="photo/Avatar.jpg">
+            <p class="pib">Anastasia <b>Kosogor</b></p>
+            <p class="profession" style="color:#D3D3D3">Creative Director</p><br/>
+<a href="facebook.com"><img class="network" src="icons/facebook.png"></a>
+<a href="twitter.com"><img class="network" src="icons/twitter.png"></a>
+<a href="linkedin.com"><img class="network" src="icons/linkedin.png"></a>
+         <div class="navigation">
+            <p><img class="nav" src="icons/calendar.png">March 25, 1995</p>
+            <p><img class="nav" src="icons/location.png">San Francisco, USA</San-Franc></p>
+            <p><img class="nav" src="icons/email.png">example@mail.com</p>
+            <p><img class="nav" src="icons/phone.png">+1 (070) 123-4567</p>
+            <p><img class="nav" src="icons/skype.png">_astasiia_</p>
+         </div>
+         <a href="#"><button class="btn"><img class="load" src="icons/download.png">   <b>Download CV</b></button></a>
+         </div>
+    </div>
+    <div>
+        <div class="head">
+            <input type="radio" id="btns1" value="ABOUT"><label for="btns1" class="choose1">ABOUT</label>
+            <input type="radio" id="btns" value="RESUME"><label for="btns2" class="choose">RESUME</label>
+            <input type="radio" id="btns" value="PORTFOLIO"><label for="btns3" class="choose">PORTFOLIO</label>
+            <input type="radio" id="btns" value="BLOG"><label for="btns4" class="choose">BLOG</label>
+            <input type="radio" id="btns" value="CONTACT"><label for="btns5" class="choose">CONTACT</label>
+        </div>
+        <div>
+            <span class="Ab">About Me</span><br/>
+            <img class="line" src="icons/line.png">
+            <div class="description">
+                <p>I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media. I enjoy
+                turning complex problems into simple, beautiful and intuitive designs.
+                <br/>
+                <br/>
+                My job is to build your website so that it is functional and user-friendly but at the same time
+                attractive. Moreover, I add personal touch to your product and make sure that is eye-catching
+                and easy to use. My aim is to bring across your message and identity in the most creative way. I
+                created web design for many famous brand companies.</p>
+            </div>
+            <p class="text">What I'm Doing</p>
+        </div>
+        <div class="skills">
+            <div class="block">
+                <br/>
+                <img class="skills1" src="icons/sketch.png">
+                <h3 class="design"><b>Web Design</b></h3>
+                <p class="TEXT">
+                    The most modern and high-quality <br/>
+                    design made at a professional level.<br/> 
+                </p>
+            </div>
+            <div class="block">
+                <br />
+                <img class="skills1" src="icons/web-development.png">
+                <h3 class="design"><b>Web Development</b></h3>
+                <p class="TEXT">
+                    High-quality development of sites at <br />
+                    a professional level.<br />
+                </p>
+            </div>
+            <div class="block">
+                <br />
+                <img class="skills1" src="icons/smartphone.png">
+                <h3 class="design"><b>Mobile Apps</b></h3>
+                <p class="TEXT">
+                    Professional development of <br />
+                    applications for IOS and Android. <br />
+                </p>
+            </div>
+            <div class="block">
+                <br />
+                <img class="skills1" src="icons/camera.png">
+                <h3 class="design"><b><bPhotography</b></h3>
+                <p class="TEXT">
+                    I make high-quality photos of any <br />
+                    category at a professional level.<br />
+                </p>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
