--- a/Laba7/laba7.html
+++ b/Laba7/laba7.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <h2 class="Text">Laboratorna 7 - JavaScript</h2>
-    <li><button id="Task1"></button></li><br/>   
-    <li><button id="Task2"></button></li><br/>
-    <li><button id="Task3"></button></li>
+    <ul>
+    <li><button id="mission1"></button></li><br/>   
+    <li><button id="mission2"></button></li><br/>
+    <li><button id="mission3"></button></li>
+    </ul>
 </body>
 <script src="laba7.js"></script>
 </html>
